<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="353dp"
        android:layout_height="653dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="42dp">


        <EditText
            android:id="@+id/txtIdentidad"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="18dp"
            android:hint="@string/hint_identidad"
            android:inputType="text|number" />

        <EditText
            android:id="@+id/txtTipoUser"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="18dp"
            android:hint="@string/hint_tipoUser"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="18dp"
            android:hint="@string/hint_nombre"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtEdad"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="18dp"
            android:hint="@string/hint_edad"
            android:inputType="text|number" />

        <EditText
            android:id="@+id/txtTipoA"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="18dp"
            android:hint="@string/hint_tipoA"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtRaza"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="18dp"
            android:hint="@string/hint_raza"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="18dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />


        <EditText
            android:id="@+id/txtUsuario"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="18dp"
            android:hint="@string/hint_usuario"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtContraseña"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="18dp"
            android:hint="@string/hint_contraseña"
            android:inputType="textPersonName" />

    </LinearLayout>

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="191dp"
        android:layout_height="51dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="221dp"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="15dip"
        android:text="Registrarse"
        android:translationY="35dp"
        app:backgroundTint="#009688"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>